[package]
name = "sutemi"
version = "0.1.0"
description = "A native desktop GUI for Jujutsu"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "sutemi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
