[package]
name = "sutemi"
version = "0.2.0"
description = "A native desktop GUI for Jujutsu"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "sutemi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
